# internal/handler/handler.go
@@ -1,0 +1,16 @@
+package handler
+
+import "github.com/gin-gonic/gin"
+
+func Top(c *gin.Context) {
+	// TODO
+}
+func List(c *gin.Context) {
+	// TODO
+}
+func Item_Details(c *gin.Context) {
+	// TODO
+}
+func Category(c *gin.Context) {
+	// TODO
+}
